Replaced overflow-x and y with just overflow to prevent scrolling

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,7 @@ main{
     z-index: 1;
     top: 0; 
     right: 0; 
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
     transition: 0.5s;
 }
 .closeButton{
